<resources>
    <string name="app_name">Shop App</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="forgot_pass">Olvidé mi contraseña</string>
    <string name="sign_in">Sign In</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="buy">Comprar</string>
    <string name="or">O</string>
    <string name="money_sign">$</string>



    <string name="my_products_frag">Mis Productos</string>
    <string name="profile_frag">Perfil</string>
    <string name="settings_frag">Configuraciones</string>
    <string name="confirm_purchase_title">Confirmar compra</string>
    <string name="exit_title">Cerrar aplicación</string>
    <string name="confirm_purchase">Confirme que desea comprar este producto</string>
    <string name="confirm_exit">¿Esta seguro que desea salir?</string>
    <string name="purchase_notification">Compra realizada con éxito</string>
    <string name="texto">Caution: If you need a Context object within your Fragment, you can call getActivity(). However, be careful to call getActivity() only when the fragment is attached to an activity. When the fragment is not yet attached, or was detached during the end of its lifecycle, getActivity() will return null</string>
    <string name="default_info_title">default</string>
    <string name="default_info_snippet">default</string>
    <string name="facebook_login_error">Fallo al intentar autenticarse</string>
    <string name="forgot_pass_error">Pruebe a autenticarse usando Google o Facebook ;)</string>
    <string name="auth_error">Usuario o contraseña equivocada (u: peter p: 123)</string>

    <string name="facebook_app_id">5537092076309547</string>
    <string name="fb_login_protocol_scheme">fb5537092076309547</string>
    <string name="facebook_client_token">073eaa61172860c61e409f2a4986fa26</string>
</resources>